<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pokemon Manager</string>
    <string name="title_about">About Me</string>
    <string name="info_title">STUDENT INFORMATION</string>
    <string name="name_label">Name: Pham Tri Thanh</string>
    <string name="class_label">Class: D22_TH02</string>
    <string name="id_label">Student ID: DH52201466</string>
    <string name="email_label">Email: DH52201466@student.stu.edu.vn</string>
    <string name="contact_label">Contact:</string>
    <string name="btn_dial">Dial</string>
    <string name="btn_call">Call Now</string>
    <string name="location_label">Location: Saigon Technology University</string>
    <string name="title_top">Pokemon Management</string>
    <string name="title_top2">POKEMON MANAGERMENT</string>
    <string name="login_title">LOGIN POKEMON</string>
    <string name="lbl_username">Account Name</string>
    <string name="lbl_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="title_pokemon">POKEMON TYPE MANAGERMENT</string>
    <string name="menu_home">Pokemon Type Managerment</string>
    <string name="menu_list">Pokemon Mangerment</string>
    <string name="menu_about">About Me</string>
    <string name="menu_logout">Logout</string>
    <string name="hint_id">Type id (Enter ID)</string>
    <string name="hint_name">Type Pokemon</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_save">Save</string>
    <string name="item_type_id">ID Type:</string>
    <string name="item_type_name">Name Type:</string>
    <string name="title_pokemon_2">Pokemon Type Managerment</string>
    <string name="poke_id">ID:</string>
    <string name="poke_type">Type:</string>
    <string name="poke_type_id">Type ID:</string>
    <string name="poke_height">Height:</string>
    <string name="poke_weight">Weight:</string>
    <string name="poke_name">Name:</string>
    <string name="detail_pokemon">POKEMON INFO</string>
    <string name="btn_luuhinh">Choose Image</string>
    <string name="btn_nhap">Pokemon ID (Enter ID)</string>
    <string name="btn_nhaptenpokemon">Fullname (Name Pokemon)</string>
    <string name="btn_chieucao">Height</string>
    <string name="btn_canang">Weight</string>
   <string name="type_pokemon">Type:</string>
    <string name="btn_thoat_detail">Exit</string>
    <string name="btn_luu_detail">Save</string>
    <string name="btn_capnhathe">Update</string>
    <string name="type_fire">Fire</string>
    <string name="type_water">Water</string>
    <string name="type_grass">Grass</string>
    <string name="type_electric">Electric</string>
    <string name="type_ground">Ground</string>
    <string name="type_rock">Rock</string>
    <string name="type_fighting">Fighting</string>
</resources>