<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFF5F7"
    android:backgroundTint="@color/cardview_light_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_pokemon"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#FF99FF"
            android:layout_marginBottom="20dp"/>

        <ImageView
            android:id="@+id/imgDetail"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/pokeball"
            android:scaleType="centerCrop"
            android:background="#E0E0E0"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnChooseImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_luuhinh"
            android:backgroundTint="#FF3300"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border_item"
            android:padding="15dp"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/edtPokeId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/btn_nhap"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/edtPokeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/btn_nhaptenpokemon"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/edtHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/btn_chieucao"
                android:inputType="numberDecimal"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/edtWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/btn_canang"
                android:inputType="numberDecimal"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_pokemon"
                android:textStyle="bold"
                android:textColor="#333"/>

            <Spinner
                android:id="@+id/spnType"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnExit"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_thoat_detail"
                    android:backgroundTint="#757575"
                    android:layout_marginRight="20dp"/>

                <Button
                    android:id="@+id/btnSavePoke"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_luu_detail"
                    android:backgroundTint="#FF3399"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>