<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/login_background">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FFD700"
        app:title="@string/title_pokemon_2"
        app:titleTextColor="#800000"
        app:menu="@menu/main_menu" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_pokemon"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#00FF00"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border_box"
        android:padding="16dp">
        <EditText
            android:id="@+id/edtMaHe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_id"
            android:inputType="number"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/edtTenHe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/btnXoaTrang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_delete"
                android:backgroundTint="#FF0000"
                android:layout_marginRight="20dp"/>

            <Button
                android:id="@+id/btnThem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_save"
                android:backgroundTint="#FF0000"/>
        </LinearLayout>
    </LinearLayout>
    <ListView
        android:id="@+id/lvHePokemon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:dividerHeight="5dp"
        android:divider="@android:color/transparent"/>
</LinearLayout>